--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "businessmodel",
+  "name": "budibase-svelte-select",
   "version": "1.0.0",
   "description": "businessmodel",
   "license": "MIT",
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@crownframework/svelte-error-boundary": "^1.0.3",
-    "svelte": "^3.49.0"
+    "svelte": "^3.49.0",
+    "svelte-select": "^5.6.1"
   },
   "devDependencies": {
     "@budibase/backend-core": "^2.0.13",
